# threaded-speech-transcriber-GCP-CLOUD-RUN

./: .gcloudignore  .gitignore  Dockerfile  README.md  deploy.sh  formatting.sh  main.py  main1-nothreding.py  main2-threding.py  op_result_log.txt  pyproject.toml  requirements.txt  test5-thredding.py
config/: global_config.py
schemas/: ai_prompt.py
services/: ai_prompt_service.py  clova_stt_service.py  google_docs_service.py  upload_service.py
tests/services/: test_google_docs_service.py
utils/: drive_utils.py  transcribe.py
