[project]
name = "fastapi-upload-from-drive-to-gcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-storage>=3.0.0",
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.4",
    "python-dotenv>=1.0.1",
    "types-requests>=2.32.0.20250328",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "types-requests>=2.32.0.20250328",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]  # E(PEP8), F(잠재적 오류), I(Import 정리-isort)
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
